# Posix_GCC_Simulator

./: .cproject  CMakeLists.txt
FreeRTOS_Posix/: FreeRTOSConfig.h  main.cpp
FreeRTOS_Posix/Debug/: subdir.mk
FreeRTOS_Posix/FreeRTOS_Kernel/include/freertos/: portable.h
FreeRTOS_Posix/FreeRTOS_Kernel/portable/GCC/Posix/: port.c  portmacro.h
